--- a/database.tex
+++ b/database.tex
@@ -11,7 +11,7 @@
 \section{Normalizacja - Teoria}
 \subsection*{Co to jest normalizacja?}
 \textbf{Normalizacja} to proces sprowadzania schematu do odpowiedniej postaci, w gównej mierze polega
-na podzielenie tabeli i połączenie ich kluczem głównym. Wady (anomalie) które mogą wystąpić podczas normalizacji:
+na podzielenie tabeli i połączenie ich kluczem głównym.
 
 \subsection*{Atrybuty kluczowe i niekluczowe}
 W procesie normalizacji musimy zaznaczyć atrybuty kluczowe (czyli atrybuty posiadające klucz),
