--- a/database.tex
+++ b/database.tex
@@ -49,7 +49,7 @@ atrybutów niekluczowych.
   \item \textbf{Formanty}
   \item \textbf{Właściowści}
 \end{itemize}
-Dzięki identyfikatorą można tworzyć wyrażenia które odwołują się do wartości elementów np.
+Dzięki identyfikatorą można zrobić zwyrażenia które odwołują się do wartości elementów np.
 $= [\text{Tabela}].[\text{Pole z tabeli}]$
 \vspace{1em}
 
